<resources>
    <string name="app_name">OAuthLogin</string>

    <string name="title_activity_web">Twitter Login</string>
    <string name="action_settings">Settings</string>
    <string name="twitter_login">Twitter Login</string>
    <string name="gmail_login">Gmail Login</string>
    <string name="fb_login">FaceBook Login</string>
    <string name="twitter_logout">Twitter Logout</string>
    <string name="gmail_logout">Gmail Logout</string>
    <string name="fb_logout">FaceBook Logout</string>
    <string name="name">Name:</string>
    <string name="poor_interner_connection">Poor Internet Connection</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Twitter Configurations -->
    <string name="twitter_callback">http://appsforbb.com</string>
    <string name="twitter_consumer_key">YOUR_CONSUMER_KEY_HERE</string>
    <string name="twitter_consumer_secret">YOUR_CONSUMER_SECRET_HERE</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
</resources>
